<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map"/>
    <item
        android:id="@+id/favs"
        android:enabled="true"
        android:icon="@drawable/ic_favs"
        android:title="@string/favs"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_outlined"
        android:title="@string/profile"/>
     <item
         android:id="@+id/logout"
         android:enabled="true"
         android:icon="@drawable/ic_logout"
         android:title="@string/logout"/>
</menu>