<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_settings_text"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/baseCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsText"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userProfileNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        tools:text="Kis Béla" />

                    <TextView
                        android:id="@+id/userProfileNickNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/nickname"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/userProfileEmailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:text="kis.bela@teszt.hu" />

                    <TextView
                        android:id="@+id/userProfilePasswordText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/password"
                        android:textSize="20sp" />


                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    app:srcCompat="@mipmap/ic_launcher" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/themeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/baseCard"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/dark_theme_text"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/darkThemeToggle"
                        style="@style/SwitchCompatStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:checked="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/language_in_hu"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/languageToggle"
                        style="@style/SwitchCompatStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:checked="false" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/filterCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themeCard"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/default_filters"
                    android:textAppearance="?attr/textAppearanceHeadline6" />


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/baseFilterGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:chipSpacingHorizontal="20dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsDog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/dog_fancier"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsParking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/parking_available"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsFamily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/family_place"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsGluten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/gluten_free"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsLactose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/lactose_free"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsVegan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/vegan"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingsVegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/vegetarian"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingFastFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/fast_food"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/delivery"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/filterSettingCreditCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="false"
                        android:text="@string/credit_card"
                        app:chipBackgroundColor="@drawable/chip_background_color" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/save_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>